cluster/apps/home/home-assistant/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  hosts:
  - home-assistant.${CLUSTER_DOMAIN}
  gateways:
  - system-ingress/gateway
  http:
  - route:
    - destination:
        host: home-assistant.home-assistant.svc.cluster.local
        port:
          number: 8123
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: home-assistant-codeserver
  namespace: home-assistant
spec:
  hosts:
  - home-vscode.${CLUSTER_DOMAIN}
  gateways:
  - system-ingress/gateway
  http:
  - route:
    - destination:
        host: authentik.system-ingress.svc.cluster.local
        port:
          number: 80
